# glsl2agal

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt
agalassembler/: agal.h
agaloptimiser/src/: genabc.sh
avm2/: AGALCompiler.cpp  AGALCompiler.h  CMakeLists.txt
contrib/glslopt/: glsl_loader.cpp  glsl_loader.h  glslopt_main.cpp  glslopt_util.h
src/agal/: glsl2agal.cpp
src/glsl/: builtin_functions.cpp  coalesce_floats.cpp  coalesce_temps.cpp  glsl_optimizer.cpp  glsl_optimizer.h  ir.cpp  ir.h  ir_agal_expression_flattening.cpp  ir_constant_expression.cpp  ir_function_detect_recursion.cpp  ir_optimization.h  ir_print_agal_visitor.cpp  ir_print_glsl_visitor.cpp  ir_print_glsl_visitor.h  ir_schedule_instructions.cpp  ir_unused_structs.cpp  ir_unused_structs.h  lower_arrays.cpp  lower_conditionl_assigns_to_agal.cpp  lower_equivalent_builtin_to_agal.cpp  opt_algebraic.cpp  remap_agalvars.cpp  remove_casts.cpp  replaceInstruction.h  swizzle_everything.cpp  unique_variables.cpp
src/mesa/main/: imports.c
swc/: CMakeLists.txt  swc.cpp
